<!--
  ~ Copyright 2021 headuck (https://blog.headuck.com/)
  ~
  ~ This file is part of GoOutWithDuck
  ~
  ~ GoOutWithDuck is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ GoOutWithDuck is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with GoOutWithDuck. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name">GoOutWithDuck</string>
    <string name="app_short_name">GoOutWithDuck</string>

    <!-- Translatable resources -->

    <string name="menu_home">Main</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_history">History</string>
    <string name="menu_upload">Report</string>
    <string name="menu_download">Cases</string>
    <string name="menu_settings">Settings</string>

    <string name="title_main_record_text">Record your visits</string>
    <string name="title_history">Visit Records</string>
    <string name="title_download">Visited venues of cases</string>

    <string name="menu_delete_venue">Delete</string>

    <string name="notification_last_update">Last updated at %s</string>
    <string name="notification_count">unread notification(s)</string>
    <string name="notification_hint">More details</string>

    <string name="camera_permission_text">Grant camera permission</string>
    <string name="camera_permission_denied_text">Camera permission denied</string>
    <string name="camera_scan_text">Scan QR Code</string>
    <string name="scan_already_checked_in">Venue still checked in and cannot be recorded</string>

    <string name="scan_done_autoleave">Auto leave after</string>

    <string name="license_plate">Registration Mark:</string>
    <string name="checkout_reminder">Remember to press \'Leave\' button</string>
    <string name="button_leave">Leave</string>
    <string name="enter_taxi">You have entered taxi</string>
    <string name="enter_venue">You have entered the venue</string>
    <string name="title_scan_code">Scan QR Code</string>

    <string name="home_venue0_title">Scan</string>
    <string name="home_venue0_desc">Scan QR code on visit</string>
    <string name="home_venue1_title">Input</string>
    <string name="home_venue1_desc">Input visit details</string>

    <string name="menu_filter_by_type">By venue type</string>

    <string name="leave_success_message">Left %2$s at %1$s</string>
    <string name="leave_success_edit_action">EDIT</string>

    <string name="download_error_message">Update failed: %1$s</string>

    <string name="duration_5_minutes">5 minutes</string>
    <string name="duration_15_minutes">15 minutes</string>
    <string name="duration_30_minutes">30 minutes</string>
    <string name="duration_45_minutes">45 minutes</string>
    <string name="duration_1_hour">1 hour</string>
    <string name="duration_2_hours">2 hours</string>
    <string name="duration_3_hours">3 hours</string>
    <string name="duration_4_hours">4 hours</string>
    <string name="duration_5_hours">5 hours</string>
    <string name="duration_6_hours">6 hours</string>
    <string name="duration_8_hours">8 hours</string>
    <string name="duration_10_hours">10 hours</string>
    <string name="duration_12_hours">12 hours</string>
    <string name="duration_14_hours">14 hours</string>
    <string name="duration_16_hours">16 hours</string>
    <string name="duration_18_hours">18 hours</string>
    <string name="duration_24_hours">24 hours</string>

    <string name="title_venue_details">Venue visit details</string>
    <string name="details_visit_date">Visit date</string>
    <string name="details_entry_time">Entry time</string>
    <string name="details_exit_time">Exit time</string>
    <string name="details_venue_name">Venue</string>
    <string name="details_venue_license_no">License No</string>
    <string name="details_venue_type">Type</string>
    <string name="details_change">Change</string>

    <string name="title_inbox">Inbox</string>

    <plurals name="checkin_others">
        <item quantity="one">and another place</item>
        <item quantity="other">and %d other places</item>
    </plurals>


</resources>
