<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 headuck (https://blog.headuck.com/)
  ~
  ~ This file is part of GoOutWithDuck
  ~
  ~ GoOutWithDuck is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ GoOutWithDuck is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with GoOutWithDuck. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_main"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/page_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_menu_inbox"
        android:title="@string/menu_inbox"/>
    <item
        android:id="@+id/page_history"
        android:enabled="true"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/menu_history"/>
    <item
        android:id="@+id/page_download"
        android:enabled="true"
        android:icon="@drawable/ic_menu_download"
        android:title="@string/menu_download"/>
</menu>