<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 headuck (https://blog.headuck.com/)
  ~
  ~ This file is part of GoOutWithDuck
  ~
  ~ GoOutWithDuck is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ GoOutWithDuck is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with GoOutWithDuck. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.headuck.app.gooutwithduck.utilities.LocaleUtil" />
        <variable
            name="visitHistory"
            type="com.headuck.app.gooutwithduck.data.VisitHistory"
        />
        <variable
            name="displayLang"
            type="String"
        />
        <variable
            name="callback"
            type="com.headuck.app.gooutwithduck.VenueDetailFragment.Callback"
        />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".VenueDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/venue_detail_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/Theme.GoOutWithDuck.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/venue_detail_toolbar"
                style="@style/Widget.GoOutWithDuck.Toolbar"
                app:navigationIcon="@drawable/ic_nav_back"
                app:title="@string/title_venue_details">
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/venue_detail_app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_normal"
            android:visibility="@{visitHistory == null ? View.GONE : View.VISIBLE}"
            android:stretchColumns="1"
            android:shrinkColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{visitHistory.venueInfo.type == `TAXI`? View.GONE : View.VISIBLE}"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/details_venue_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/venue_detail_venue_name"
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Content"
                    android:layout_width="0dp"
                    android:text="@{LocaleUtil.getVisitLocationName(displayLang, visitHistory.venueInfo)}"
                    tools:text="Venue Name"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{visitHistory.venueInfo.type == `TAXI`? View.VISIBLE : View.GONE}"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/details_venue_license_no"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/venue_detail_license_no"
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Content"
                    android:layout_width="0dp"
                    android:text="@{LocaleUtil.getVisitLocationName(displayLang, visitHistory.venueInfo)}"
                    tools:text="License No"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/details_venue_type"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/venue_detail_venue_type"
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Content"
                    android:text="@{visitHistory.venueInfo.type}"
                    tools:text="Venue Type"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/details_visit_date"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/venue_detail_visit_date"
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Content"
                    android:text="@{LocaleUtil.getVisitLocationDate(displayLang, visitHistory.startDate)}"
                    tools:text="2021-01-20"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/details_entry_time"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/venue_detail_entry_time"
                        android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Time"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@{LocaleUtil.getVisitLocationTime(displayLang, visitHistory.startDate)}"
                        tools:text="2:30"
                        tools:ignore="RtlCompat" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/venue_detail_entry_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> callback.onTimePickerClick(v)}"
                        android:text="@string/details_change"/>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/venue_detail_exit_time_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{(visitHistory.endDate != null) ? View.VISIBLE : View.GONE}"
                android:layout_marginBottom="@dimen/margin_normal">
                <com.google.android.material.textview.MaterialTextView
                    android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Label"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/details_exit_time"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/venue_detail_exit_time"
                        android:textAppearance="@style/TextAppearance.GoOutWithDuck.Detail.Text.Time"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@{LocaleUtil.getVisitLocationTime(displayLang, visitHistory.endDate)}"
                        tools:text="3:30"
                        tools:ignore="RtlCompat" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/venue_detail_exit_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> callback.onTimePickerClick(v)}"
                        android:text="@string/details_change"/>
                </LinearLayout>

            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
